--- a/CognitoSampleApp/Views/Home/Index.cshtml
+++ b/CognitoSampleApp/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     </div>
 
     <div class="col-md-3">
-        <form action="/homr/login">
+        <form action="/home/Login" method="post">
             <div class="imgcontainer">
                 <img src="~/Content/Images/login.png" alt="Avatar" class="avatar">
             </div>
@@ -17,17 +17,19 @@
             <div class="container">
                 <div class="c_user_pass">
                     <label for="uname"><b>Username</b></label>
-                    <input type="text" placeholder="Enter Username" name="uname" required>
+                    <input type="text" placeholder="Enter Username" name="username" required>
 
                     <br />
                     <label for="psw"><b>Password</b></label>
-                    <input type="password" placeholder="Enter Password" name="psw" required>
+                    <input type="password" placeholder="Enter Password" name="pass" required>
 
                 </div>
                 <button type="submit">Login</button>
                 <label>
                     <input type="checkbox" checked="checked" name="remember"> Remember me
                 </label>
+
+                <div>@ViewBag.LoginStatus</div>
             </div>
                 <span class="psw" > <a href="#"> Forgot  password?</a></span>
         </form>
