--- a/CognitoSampleApp/Views/Home/Index.cshtml
+++ b/CognitoSampleApp/Views/Home/Index.cshtml
@@ -4,8 +4,34 @@
 
 
 <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-6">
         <h2>Amazon cognito demo</h2>
+    </div>
+
+    <div class="col-md-3">
+        <form action="/home/SignUp" method="post">
+            <div class="imgcontainer">
+                <img src="~/Content/Images/login.png" alt="Avatar" class="avatar">
+            </div>
+
+            <div class="container">
+                <div class="c_user_pass">
+                    <label for="uname"><b>Username</b></label>
+                    <input type="text" placeholder="Enter Username" name="username" required>
+
+                    <label><b>Email</b></label>
+                    <input type="text" placeholder="Enter Email" name="email" required>
+
+                    <br />
+                    <label for="psw"><b>Password</b></label>
+                    <input type="password" placeholder="Enter Password" name="pass" required>
+
+                </div>
+                <button type="submit">Sign up</button>
+
+                <div class="viewBag">@ViewBag.SignUpStatus</div>
+            </div>
+        </form>
     </div>
 
     <div class="col-md-3">
@@ -29,9 +55,9 @@
                     <input type="checkbox" checked="checked" name="remember"> Remember me
                 </label>
 
-                <div>@ViewBag.LoginStatus</div>
+                <div class="viewBag">@ViewBag.LoginStatus</div>
             </div>
-                <span class="psw" > <a href="#"> Forgot  password?</a></span>
+            <span class="psw"> <a href="#"> Forgot  password?</a></span>
         </form>
     </div>
 </div>
