--- a/CognitoSampleApp/Views/Home/ResetPassword.cshtml
+++ b/CognitoSampleApp/Views/Home/ResetPassword.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<form action="/home/ResetPassword" method="post">
+<form action="/home/NewPasswordRequired" method="post">
     <div class="imgcontainer">
         <img src="~/Content/Images/login.png" alt="Avatar" class="avatar">
     </div>
