--- a/CognitoSampleApp/Views/Shared/_Layout.cshtml
+++ b/CognitoSampleApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <meta name="description" content="The description of my page" />
+    @RenderSection("header", false);
 </head>
 <body>
    @RenderBody()
